# ChangeLog for net-misc/whois
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/whois/ChangeLog,v 1.134 2009/11/17 19:49:49 ranger Exp $

  17 Nov 2009; Brent Baude <ranger@gentoo.org> whois-4.7.36.ebuild:
  Marking whois-4.7.36 ppc64 for bug 291095

  02 Nov 2009; Kenneth Prugh <ken69267@gentoo.org> whois-4.7.36.ebuild:
  amd64 stable, bug #291095

  02 Nov 2009; Jeroen Roovers <jer@gentoo.org> whois-4.7.36.ebuild:
  Stable for HPPA (bug #291095).

  01 Nov 2009; nixnut <nixnut@gentoo.org> whois-4.7.36.ebuild:
  ppc stable #291095

  30 Oct 2009; Raúl Porcel <armin76@gentoo.org> whois-4.7.36.ebuild:
  alpha/arm/ia64/s390/sh/sparc/x86 stable wrt #291095

*whois-4.7.36 (12 Sep 2009)

  12 Sep 2009; Patrick Lauer <patrick@gentoo.org> +whois-4.7.36.ebuild:
  Bump

*whois-4.7.34 (25 Jun 2009)

  25 Jun 2009; Mike Frysinger <vapier@gentoo.org> +whois-4.7.34.ebuild:
  Version bump with fixes from Petr Pisar #275209.

  30 May 2009; nixnut <nixnut@gentoo.org> whois-4.7.30.ebuild:
  ppc stable #271096

  28 May 2009; Steve Dibb <beandog@gentoo.org> whois-4.7.30.ebuild:
  amd64 stable, bug 271096

  28 May 2009; Raúl Porcel <armin76@gentoo.org> whois-4.7.30.ebuild:
  alpha/arm/ia64/s390/sh stable wrt #271096

  27 May 2009; Christian Faulhammer <fauli@gentoo.org> whois-4.7.30.ebuild:
  stable x86, bug 271096

  26 May 2009; Ferris McCormick <fmccor@gentoo.org> whois-4.7.30.ebuild:
  Sparc stable, Bug #271096.

  25 May 2009; Brent Baude <ranger@gentoo.org> whois-4.7.30.ebuild:
  Marking whois-4.7.30 ppc64 for bug 271096

  24 May 2009; Jeroen Roovers <jer@gentoo.org> whois-4.7.30.ebuild:
  Stable for HPPA (bug #271096).

*whois-4.7.33 (24 May 2009)

  24 May 2009; Mike Frysinger <vapier@gentoo.org> +whois-4.7.33.ebuild:
  Version bump.

  29 Dec 2008; Raúl Porcel <armin76@gentoo.org> whois-4.7.27.ebuild:
  arm/s390/sh/x86 stable wrt #252525
