@@ -1,12 +1,8 @@
 AUX whois-4.7.2-config-file.patch 198 RMD160 874ed86cab594d8fa69ee9599e2a1c3b52c611c7 SHA1 83b2db998f9ee90398138029816952f19a91634a SHA256 b7ad9cb716a8dbd1bb64dc80c1d4460c4a5661ba9420b771f9323c4337dbbea2
 AUX whois-4.7.26-gentoo-security.patch 2846 RMD160 e68e6a00fa79ca7a1d06cf8732c01f338563fd1b SHA1 d1ed78c1f9bf21b0db6324901ed3dfbc1fbd2733 SHA256 33d7b92a7506d8de19b9311aac4ec137de82ad592b59116807eef384d81fe6e2
-DIST whois_4.7.30.tar.gz 69685 RMD160 a311c17d19fa8d062379144f9051e22952521262 SHA1 049a8946a62d95d00ca1cafe928a064119237cb0 SHA256 67581c0fa7b75ccea366e531b807b02a7f1dbe6fc55d4cd440e8f09eea491d36
-DIST whois_4.7.33.tar.gz 71804 RMD160 0c05765851c68d4ae512a735ab4d3a18e77ec770 SHA1 0b7ead36d5dd3155ca1563e089371da468894176 SHA256 d27d6936d23a81e481eb35b3ed8d0cde6e2ac801b299580ceae8104bb10e6883
-DIST whois_4.7.34.tar.gz 71941 RMD160 026b134caff5998d355ed6e07919067f36555dc6 SHA1 bf706efc0b85e180e2cd5d2fa265c6015f7b791d SHA256 4ab43d1b638cf3603c8117cdfce25b76e15ab828a1e762ba25ec924cb080e299
 DIST whois_4.7.36.tar.gz 72516 RMD160 0c26501e4de028fb62541db2a5fe8a38dd99d532 SHA1 b3625fac4fb7fdb9b6ab1305d78bcfe260ec0691 SHA256 5bfbb9f9ad9747795945f876764c974719509705b5c445f42b3bdd6c60c66cea
-EBUILD whois-4.7.30.ebuild 1280 RMD160 b75641e8eb8f39882d6396c2f7b185e09ee3c3c8 SHA1 e23bf95b75e011ea0dc2082f7e4ff8f2ebc390e2 SHA256 13359518bb64d6a07c883655ccf974e92d645090ccfa9cb70af12c47522f01d5
-EBUILD whois-4.7.33.ebuild 1280 RMD160 883d50f9207280d6d680feecbe70ed7f91da1156 SHA1 864b7b6d6754ef6dc6ca88da7d6922a39fbe7b10 SHA256 c6d7462f3596fd19cc2a397ca1c5e6632738586b79ca71a29d27af73279cbee4
-EBUILD whois-4.7.34.ebuild 1201 RMD160 ed3760f44d606ad7a26a735dfd394961d161b432 SHA1 55bbe3d4975b471a799b995f4d73a489f4d41582 SHA256 5c5ed7e236e2b193ced2c9b9e88329b1b85080c05a14a520ab1362af01928da1
+DIST whois_5.0.2.tar.gz 78755 RMD160 88e63677b6d5fbd68c686635369fe0bdf09f26ac SHA1 e4e168bda00f58d1ae53ca5e4beb1839b78a89ac SHA256 d49a411bc014ffc68180907bfd3a8708878004ce9c3b4ac96937760cd850c084
 EBUILD whois-4.7.36.ebuild 1201 RMD160 667af469e7eacca9ed51c756b32c1173e90a8eaf SHA1 51b60cbefc54cf04270990433215f70d152515d3 SHA256 2d98e1020566d7dd8f655ca9adf7e57f9a2c03d5b423ffe5b4ca57b0db34d3e2
-MISC ChangeLog 16797 RMD160 81fae3968e182640eb1c9531c21c95916fa23320 SHA1 d4dc2140a2b850a79027fee7eae6051ff23789a2 SHA256 b996c64eadff87a6ae42f50e5dcd5e13431acef293704ecd4ebbd99276ab17b9
+EBUILD whois-5.0.2.ebuild 1143 RMD160 ceed518ff3c07aac836cff673c5d7de6d4b2a9f9 SHA1 13ada62e9827199c9d93d3044cd91497336bde54 SHA256 ee43204f25fce80a7eda9660ec110133463c33d0eed92849c5c12c2d93107d58
+MISC ChangeLog 16941 RMD160 a06f4b744af37ea39b3dccd976f4d48cc3457055 SHA1 285b6a4031794bbddabede5e7d4f4ab8b592aa5f SHA256 ac98b99806c535553d1b91aa0fdd68c97eaabae1a81a30caa9a314842843ac24
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
